# PyTestAppium

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
src/managers/: appium_manager.py  emulator_manager.py
src/utils/: driver_factory.py  environment.py  logger.py
tests/: conftest.py  test_app.py
